[package]
name = "inplace"
version = "0.0.4"
authors = ["warlock <internalmike@gmail.com>"]
description = "A container that allows you temporarily take ownership of the stored value."
readme = "README.md"
documentation = "https://docs.rs/inplace/"
keywords = ["replace", "mem", "state", "change", "modify"]
categories = ["no-std", "rust-patterns"]
license = "MIT/Apache-2.0"
repository = "https://github.com/A1-Triard/inplace"

[dev-dependencies]
arraystring = { version = "0.3.0", features = [] }
typenum = "1.11.2"
